# thorvg.sandbox

./: .clang-format  .gitignore  .gitmodules  README.md  build_native.sh  build_wasm.sh  build_windows.bat  emscripten-cross.txt  imgui.ini  index.html  meson.build  meson_options.txt  thorvg_sandbox.js  thorvg_sandbox.wasm  wasm.ini
docs/: 01.build.md
resources/: imgui.ini
resources/simple/: Artboard 1.json  Main Scene (1).json  Simple.json  anchor_PATH.json  path.json
src/: main.cpp
src/core/: core.h  meson.build  platform.h
src/core/animation/: animationBuilder.cpp  animationBuilder.h  animator.cpp  animator.h
src/core/canvas/: animationCreatorCanvas.cpp  animationCreatorCanvas.h  animationCreatorInputController.cpp  animationCreatorInputController.h  canvas.cpp  canvas.h  paintWrapper.h  shapeUtil.cpp  shapeUtil.h
src/core/canvas/editMode/: addMode.cpp  addMode.h  addPathMode.cpp  addPathMode.h  editMode.h  pickMode.cpp  pickMode.h
src/core/common/: common.h  logger.cpp  logger.h  singleInstance.h  timer.h  vec.h
src/core/gpu/gl/: extraGl.cpp  extraGl.h  glUtil.cpp  glUtil.h
src/core/input/: input.h  inputAction.h  inputController.h
src/core/interface/: editInterface.cpp  editInterface.h
src/core/scene/: entity.cpp  entity.h  entity.hpp  scene.cpp  scene.h
src/core/scene/component/: components.h  uiComponents.h
src/core/scene/ui/: bbox.cpp  bbox.h  controlBox.cpp  controlBox.h  pathPoints.h
src/core/system/: io.h
src/editor/: app.cpp  app.h  appEvent.cpp  meson.build
src/editor/event/: eventController.h  eventStack.cpp  eventStack.h  events.cpp  events.h  inputEventHandler.cpp  inputEventHandler.h
src/editor/examples/: accessorExample.h  animationExample.h  boundingBoxExample.h  emptyExample.h  exampleBase.cpp  exampleBase.h  examples.h  lottieExample.h  meson.build  particleExample.h  svgExample.h
src/editor/imgui/: imguiCanvas.cpp  imguiCanvas.h  imguiContentBrowser.cpp  imguiContentBrowser.h  imguiShapePanel.cpp  imguiShapePanel.h  imguiTimeline.cpp  imguiTimeline.h
src/editor/window/: glWindow.cpp  glWindow.h  window.cpp  window.h
src/lottie/: jsonValue.cpp  jsonValue.h  meson.build  orderedMap.h  tvgLottieSaver.cpp  tvgLottieSaver.h
subprojects/imgui/: CMakeLists.txt  ImGuiNotify.hpp  ImGuizmo.h  imgInspect.h  imgui_helper.cpp  imgui_helper.h  imgui_neo_sequencer.cpp  meson.build
subprojects/imgui/ImGuiFileDialog/: ImGuiFileDialogConfig.h
subprojects/imgui/icons/: icons.cpp  icons.h
test/: meson.build
test/lottieSaver/: main.cpp  meson.build
test/wasmbuild/: main.cpp  meson.build
