source_file = [
    'app.cpp',
    'imgui/imguiCanvas.cpp',

    'imgui/imguiContentBrowser.cpp',
    'imgui/imguiContentBrowser.h',

    'window/window.cpp',
    'window/glWindow.cpp',
]

editor_dep += [declare_dependency(
    include_directories : include_directories('.'),
    sources             : source_file,
)]