source_file = [
    'app.cpp',
    'app.h',
    'appEvent.cpp',

    'imgui/imguiCanvas.cpp',

    'imgui/imguiShapePanel.cpp',
    'imgui/imguiShapePanel.h',

    'imgui/imguiContentBrowser.cpp',
    'imgui/imguiContentBrowser.h',
    'imgui/imguiTimeline.h',
    'imgui/imguiTimeline.cpp',

    'window/window.cpp',
    'window/glWindow.cpp',

    'event/inputEventHandler.h',
    'event/inputEventHandler.cpp',
    'event/eventController.h',
    'event/events.cpp',
    'event/events.h',
    'event/eventStack.cpp',
    'event/eventStack.h',
]

editor_dep += [declare_dependency(
    include_directories : include_directories('.'),
    sources             : source_file,
)]