source_file = [
   meson.current_source_dir().join('animationExample.h'),
   meson.current_source_dir().join('lottieExample.h'),
   meson.current_source_dir().join('particleExample.h'),
   meson.current_source_dir().join('svgExample.h'),
   meson.current_source_dir().join('boundingBoxExample.h'),
]

example_dep += [declare_dependency(
    include_directories : include_directories('.'),
    sources             : source_file,
)]
